src/objects/FieloCMS__Model__c.object
<CustomObject>
    <description>A Model is a pre-configured, reusable Page or Template pattern which may include Components to make Sites building easier.</description>
    <fields>
        <fullName>FieloCMS__Description__c</fullName>
        <description>Model description.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Icon__c</fullName>
        <defaultValue>&apos;fielosf-icon-grid&apos;</defaultValue>
        <description>Model icon.</description>
        <label>Icon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Plugin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Plugin where the Model belongs to.</description>
        <label>Plugin</label>
        <referenceTo>FieloCMS__Plugin__c</referenceTo>
        <relationshipLabel>Models</relationshipLabel>
        <relationshipName>Models</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCMS__Type__c</fullName>
        <description>Model type (Page, Template, Sites and Components).</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Component</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloCMS__XMLReference__c</fullName>
        <description>JSON code which exported as Model.</description>
        <label>JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Model</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>